--- a/css/style.css
+++ b/css/style.css
@@ -714,4 +714,27 @@ header .fa-times{
 }
 
 
+.form5{
+  height: 4rem;
+    width: 100%;
+    background: #fff;
+    border: none;
+    border-radius: 5rem;
+    padding: 0 1rem;
+    margin: 1rem 0;
+    color: var(--pink);
+    font-size: 1.7rem;
+    transition: .2s linear;
+    padding-top: 5px;
+    
 
+}
+.form6{
+  display: flex;
+  flex-direction: column;
+  padding-top: 4px;
+}
+.form7{
+  text-align: center;
+  justify-content: center;
+}
